Fix for Select description styles going off when description is longer than select container. Add a better fix select text overflow and breaking on small windows.

--- a/components/Checkbox/Checkbox.css
+++ b/components/Checkbox/Checkbox.css
@@ -166,7 +166,8 @@
     }
 
     .horizontal > .checkbox + .checkbox{
-        margin-left: 0px
+        margin-left: 0px;
+        margin-bottom: 5px;
     }
 
 }
